# sgui

./: .gitignore  CMakeLists.txt  README.md
cmake/: SGUIConfig.cmake.in
doc/: cairo_renderer_简化方案.md  container支持内容.md
examples/: CMakeLists.txt
examples/button_demo/: CMakeLists.txt  README.md  main.cpp
examples/buttons_demo/: CMakeLists.txt  main.cpp
examples/cairo_demo/: CMakeLists.txt  main.cpp
examples/color_test/: CMakeLists.txt  main.cpp
examples/container_demo/: CMakeLists.txt  README.md  main.cpp
examples/containerex_demo/: CMakeLists.txt  README.md  main.cpp
examples/css_demo/: CMakeLists.txt  css_to_kv.cpp  katana_css_demo.cpp  katana_parser_使用指南.md
examples/dom_hello/: README.md  main.cpp
examples/glfw_hello/: base_win.cpp  multi_win.cpp  test_input.cpp
examples/input_demo/: CMakeLists.txt  README.md  main.cpp
examples/margin_padding_test/: CMakeLists.txt  main.cpp
examples/repo_test/: main.cpp
examples/yoga_demo/: CMakeLists.txt  README.md  main.cpp
include/: sgui_button.h  sgui_cairo_renderer.h  sgui_common.h  sgui_container.h  sgui_containerex.h  sgui_input.h  sgui_layout.h  sgui_window.h
src/: CMakeLists.txt
src/controls/: sgui_button.cpp  sgui_input.cpp
src/layout/: sgui_container.cpp  sgui_containerex.cpp  sgui_layout.cpp
src/render/: sgui_cairo_renderer.cpp
src/window/: sgui_window.cpp
